Fixed aligning and styling on single dog

--- a/sass/theme/_dog-single.scss
+++ b/sass/theme/_dog-single.scss
@@ -6,9 +6,7 @@
 
             p {
 
-                padding: 1rem;
-                padding-top: 0;
-
+                padding: 0;
                 margin: 0;
             }
         }
@@ -17,7 +15,7 @@
 
             .append-area {
                 
-                width: 6rem;
+                width: 5rem;
             }
         }
     }
