--- a/sass/theme/_ss.scss
+++ b/sass/theme/_ss.scss
@@ -10,11 +10,6 @@
 
             margin-left: 15px;
             margin-right: 15px;
-
-            .ss-content {
-
-                
-            }
         }
     }
 }
